fear: сделать секцию elements

--- a/index.html
+++ b/index.html
@@ -13,16 +13,67 @@
     <header class="header">
         <img src="./images/logo/logo.png" alt="Логотип с надписью Место" class="header__logo">
     </header>
-    <section class="profile">
-        <img src="./images/jak-if-kusto.png" alt="Фотография Жака-Иф-Кусто" class="profile__avatar">
-        <div class="profile__intro">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <div class="profile__edit-button">
-
+    <main class="content">
+        <section class="profile">
+            <img src="./images/jak-if-kusto.png" alt="Фотография Жака-Иф-Кусто" class="profile__avatar">
+            <div class="profile__intro">
+                <div class="profile__container">
+                    <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <div class="profile__edit-button"></div>
+                </div>
+                <p class="profile__subtitle">Исследователь океана</p>
             </div>
-            <p class="profile__subtitle">Исследователь океана</p>
-        </div>
-    </section>
+            <div class="profile__add-button">
+                <div class="profile__plus"></div>
+            </div>
+        </section>
+        <section class="elements">
+            <ul class="elements__container">
+                <li class="element">
+                    <img src="./images/castle.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <div class="element__group">
+                        <h2 class="element__heading">Карачаевск</h2>
+                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                    </div>
+                </li>
+                <li class="element">
+                    <img src="./images/field.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <div class="element__group">
+                        <h2 class="element__heading">Гора Эльбрус</h2>
+                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                    </div>
+                </li>
+                <li class="element">
+                    <img src="./images/mountain.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <div class="element__group">
+                        <h2 class="element__heading">Домбай</h2>
+                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                    </div>
+                </li>
+                <li class="element">
+                    <img src="./images/field.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <div class="element__group">
+                        <h2 class="element__heading">Гора Эльбрус</h2>
+                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                    </div>
+                </li>
+                <li class="element">
+                    <img src="./images/mountain.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <div class="element__group">
+                        <h2 class="element__heading">Домбай</h2>
+                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                    </div>
+                </li>
+                <li class="element">
+                    <img src="./images/castle.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <div class="element__group">
+                        <h2 class="element__heading">Карачаево-Черкесск</h2>
+                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
