feat:сделать футер

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mesto</title>
 </head>
 
 <body class="page">
@@ -74,6 +74,21 @@
             </ul>
         </section>
     </main>
+    <footer class="footer">
+        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+    </footer>
+    <div class="popup">
+        <div class="popup__container">
+            <h2 class="popup__heading">Редактировать профиль</h2>
+            <fieldset class="popup__forms">
+                <input type="text" class="popup__form popup__form_name" placeholder="Имя">
+                <input type="text" class="popup__form popup__form_description" placeholder="Описание">
+            </fieldset>
+            <div class="popup__save-button">
+                <p class="popup__save-text">Сохранить</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
