--- a/index.html
+++ b/index.html
@@ -77,18 +77,21 @@
     <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <!-- Попап -->
+    <section class="popup">
         <div class="popup__container">
-            <h2 class="popup__heading">Редактировать профиль</h2>
-            <fieldset class="popup__forms">
-                <input type="text" class="popup__form popup__form_name" placeholder="Имя">
-                <input type="text" class="popup__form popup__form_description" placeholder="Описание">
-            </fieldset>
-            <div class="popup__save-button">
-                <p class="popup__save-text">Сохранить</p>
+            <img src="./images/svg/Close Icon.svg" alt="Крестик,закрывающий попап" class="popup__close">
+            <div class="popup__zone">
+                <h2 class="popup__heading">Редактировать профиль</h2>
+                <form class="popup__forms" method="get" action="#">
+                    <input type="text" class="popup__form popup__form_name">
+                    <input type="text" class="popup__form popup__form_description">
+                    <button class="popup__save-button" type="submit">Сохранить</button>
+                </form>
             </div>
         </div>
-    </div>
+    </section>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
