feat: исправить оибки валидации

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- Попап -->
     <section class="popup">
         <div class="popup__container">
-            <img src="./images/svg/Close Icon.svg" alt="Крестик,закрывающий попап" class="popup__close">
+            <img src="./images/svg/Close-Icon.svg" alt="Крестик,закрывающий попап" class="popup__close">
             <div class="popup__zone">
                 <h2 class="popup__heading">Редактировать профиль</h2>
                 <form class="popup__forms" method="get" action="#">
