fix:Исправление ошибок тестов яндекса

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <link rel="stylesheet" href="./pages/index.css">
@@ -37,28 +37,28 @@
                     </div>
                 </li>
                 <li class="element">
-                    <img src="./images/field.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <img src="./images/field.png" alt="красивый вид на горы с поля" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Гора Эльбрус</h2>
                         <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
                     </div>
                 </li>
                 <li class="element">
-                    <img src="./images/mountain.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <img src="./images/mountain.png" alt="Фотография острой горы" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Домбай</h2>
                         <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
                     </div>
                 </li>
                 <li class="element">
-                    <img src="./images/field.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <img src="./images/field.png" alt="красивый вид на горы с поля" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Гора Эльбрус</h2>
                         <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
                     </div>
                 </li>
                 <li class="element">
-                    <img src="./images/mountain.png" alt="Разрушенная церковь на фоне гор" class="element__img">
+                    <img src="./images/mountain.png" alt="Фотография острой горы" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Домбай</h2>
                         <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
