--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mesto</title>
+    <title>Место</title>
 </head>
 
 <body class="page">
     <header class="header">
-        <img src="./images/logo/logo.png" alt="Логотип с надписью Место" class="header__logo">
+        <img src="./images/logo/logo.svg" alt="Логотип с надписью Место" class="header__logo">
     </header>
     <main class="content">
         <section class="profile">
@@ -19,13 +19,11 @@
             <div class="profile__intro">
                 <div class="profile__container">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <div class="profile__edit-button"></div>
+                    <button type="button" aria-label="Редактировать" class="profile__edit-button"></button>
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
-            <div class="profile__add-button">
-                <div class="profile__plus"></div>
-            </div>
+            <button type="button" aria-label="Добавить" class="profile__add-button"></button>
         </section>
         <section class="elements">
             <ul class="elements__container">
@@ -80,15 +78,13 @@
     <!-- Попап -->
     <section class="popup">
         <div class="popup__container">
-            <img src="./images/svg/Close-Icon.svg" alt="Крестик,закрывающий попап" class="popup__close">
-            <div class="popup__zone">
-                <h2 class="popup__heading">Редактировать профиль</h2>
-                <form class="popup__forms" method="get" action="#">
-                    <input type="text" class="popup__form popup__form_name">
-                    <input type="text" class="popup__form popup__form_description">
-                    <button class="popup__save-button" type="submit">Сохранить</button>
-                </form>
-            </div>
+            <button type="button" aria-label="Закрыть" class="popup__close"></button>
+            <h2 class="popup__heading">Редактировать профиль</h2>
+            <form name="popup__forms" class="popup__forms" method="get" action="#">
+                <input type="text" name="popup__name" class="popup__form popup__form_type_name">
+                <input type="text" name="popup__description" class="popup__form popup__form_type_description">
+                <button class="popup__save-button" aria-label="Сохранить" type="submit">Сохранить</button>
+            </form>
         </div>
     </section>
     <script src="./scripts/index.js"></script>
