hotfix: Исправление ошибок после ревью

--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
                     <img src="./images/castle.png" alt="Разрушенная церковь на фоне гор" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Карачаевск</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                        <button class="element__like"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./images/field.png" alt="красивый вид на горы с поля" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Гора Эльбрус</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                        <button type="button" class="element__like"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./images/mountain.png" alt="Фотография острой горы" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Домбай</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                        <button type="button" class="element__like"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./images/field.png" alt="красивый вид на горы с поля" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Гора Эльбрус</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                        <button type="button" class="element__like"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./images/mountain.png" alt="Фотография острой горы" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Домбай</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                        <button type="button" class="element__like"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./images/castle.png" alt="Разрушенная церковь на фоне гор" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Карачаево-Черкесск</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
+                        <button type="button" class="element__like"></button>
                     </div>
                 </li>
             </ul>
