hotfix: Исправление после ревью

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="./images/castle.png" alt="Разрушенная церковь на фоне гор" class="element__img">
                     <div class="element__group">
                         <h2 class="element__heading">Карачаевск</h2>
-                        <button class="element__like"></button>
+                        <button type="button" class="element__like"></button>
                     </div>
                 </li>
                 <li class="element">
