hotfix: исправить ошибки тестов

--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
     </section>
     <section class="popup" id="popup-img">
         <div class="popup__picture-container">
-            <button type="button" aria-label="Закрыть" id="closeBigImg" class="popup__close popup__close_type_popup-img"
-                id="popupAddCardClose"></button>
-            <img src="#" alt="" class="popup__picture">
-            <p class="popup__description"></p>
+            <button type="button" aria-label="Закрыть" id="closeBigImg" class="popup__close popup__close_type_popup-img></button>
+            <img src=" #" alt="" class="popup__picture">
+                <p class="popup__description"></p>
         </div>
     </section>
     <script src="./scripts/index.js" defer></script>
