hotfix: исправление ошибок в тестах

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
     </section>
     <section class="popup" id="popup-img">
         <div class="popup__picture-container">
-            <button type="button" aria-label="Закрыть" id="closeBigImg" class="popup__close popup__close_type_popup-img></button>
+            <button type="button" aria-label="Закрыть" id="closeBigImg"
+                class="popup__close popup__close_type_popup-img"></button>
             <img src=" #" alt="" class="popup__picture">
-                <p class="popup__description"></p>
+            <p class="popup__description"></p>
         </div>
     </section>
     <script src="./scripts/index.js" defer></script>
