--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <link rel="stylesheet" href="./pages/index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mesto</title>
+    <title>Место</title>
 </head>
 
 <body class="page">
     <header class="header">
-        <img src="./images/logo/logo.png" alt="Логотип с надписью Место" class="header__logo">
+        <img src="./images/logo/logo.svg" alt="Логотип с надписью Место" class="header__logo">
     </header>
     <main class="content">
         <section class="profile">
@@ -19,58 +19,14 @@
             <div class="profile__intro">
                 <div class="profile__container">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <div class="profile__edit-button"></div>
+                    <button type="button" aria-label="Редактировать" class="profile__edit-button"></button>
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
-            <div class="profile__add-button">
-                <div class="profile__plus"></div>
-            </div>
+            <button type="button" aria-label="Добавить" class="profile__add-button"></button>
         </section>
         <section class="elements">
             <ul class="elements__container">
-                <li class="element">
-                    <img src="./images/castle.png" alt="Разрушенная церковь на фоне гор" class="element__img">
-                    <div class="element__group">
-                        <h2 class="element__heading">Карачаевск</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./images/field.png" alt="Разрушенная церковь на фоне гор" class="element__img">
-                    <div class="element__group">
-                        <h2 class="element__heading">Гора Эльбрус</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./images/mountain.png" alt="Разрушенная церковь на фоне гор" class="element__img">
-                    <div class="element__group">
-                        <h2 class="element__heading">Домбай</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./images/field.png" alt="Разрушенная церковь на фоне гор" class="element__img">
-                    <div class="element__group">
-                        <h2 class="element__heading">Гора Эльбрус</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./images/mountain.png" alt="Разрушенная церковь на фоне гор" class="element__img">
-                    <div class="element__group">
-                        <h2 class="element__heading">Домбай</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./images/castle.png" alt="Разрушенная церковь на фоне гор" class="element__img">
-                    <div class="element__group">
-                        <h2 class="element__heading">Карачаево-Черкесск</h2>
-                        <img src="./images/svg/heart.svg" alt="иконка лайка" class="element__like">
-                    </div>
-                </li>
             </ul>
         </section>
     </main>
@@ -78,20 +34,57 @@
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
     <!-- Попап -->
-    <section class="popup">
+    <section class="popup profile-popup">
         <div class="popup__container">
-            <img src="./images/svg/Close-Icon.svg" alt="Крестик,закрывающий попап" class="popup__close">
-            <div class="popup__zone">
-                <h2 class="popup__heading">Редактировать профиль</h2>
-                <form class="popup__forms" method="get" action="#">
-                    <input type="text" class="popup__form popup__form_name">
-                    <input type="text" class="popup__form popup__form_description">
-                    <button class="popup__save-button" type="submit">Сохранить</button>
-                </form>
-            </div>
+            <button type="button" aria-label="Закрыть" class="popup__close"></button>
+            <h2 class="popup__heading">Редактировать профиль</h2>
+            <form name="popup__forms" class="popup__forms" method="get" action="#">
+                <input required type="text" name="popup__name" minlength="2" maxlength="40" id="profile-name"
+                    class="popup__form popup__form_type_name">
+                <span class="popup__error" id="profile-name-error"></span>
+                <input required type="text" name="popup__description" id="popup-description" minlength="2"
+                    maxlength="200" class="popup__form popup__form_type_description">
+                <span class="popup__error" id="popup-description-error"></span>
+                <button class="popup__save-button" aria-label="Сохранить" type="submit">Сохранить</button>
+            </form>
         </div>
     </section>
-    <script src="./scripts/index.js"></script>
+    <section class="popup popup-AddCard">
+        <div class="popup__container">
+            <button type="button" aria-label="Закрыть" class="popup__close" id="popupAddCardClose"></button>
+            <h2 class="popup__heading">Новое место</h2>
+            <form name="popup__AddCardforms" id="popupAddCardForms" class="popup__forms" method="get" action="#">
+                <input required minlength="2" maxlength="30" type="text" placeholder="Название" id="popupAddCardTitle"
+                    name="popupAddCard__name" class="popup__form popup__form_type_name">
+                <span class="popup__error" id="popupAddCardTitle-error"></span>
+                <input required type="url" minlength="2" placeholder="Ссылка на картинку" id="popupAddCardLink"
+                    name="popupAddCard__description" class="popup__form popup__form_type_description">
+                <span class="popup__error" id="popupAddCardLink-error"></span>
+                <button class="popup__save-button" id="popupCreateButton" aria-label="Сохранить"
+                    type="submit">Создать</button>
+            </form>
+        </div>
+    </section>
+    <section class="popup popup-img">
+        <div class="popup__picture-container">
+            <button type="button" aria-label="Закрыть" id="closeBigImg"
+                class="popup__close popup__close_type_popup-img"></button>
+            <img src=" #" alt="" class="popup__picture">
+            <p class="popup__description"></p>
+        </div>
+    </section>
+    <script src="./scripts/index.js" type="module" defer></script>
+    <script src="./scripts/validate.js"></script>
+    <template id="card-template">
+        <li class="element">
+            <div class="element__trash-can"></div>
+            <img src="#" class="element__img">
+            <div class="element__group">
+                <h2 class="element__heading"></h2>
+                <button type="button" class="element__like"></button>
+            </div>
+        </li>
+    </template>
 </body>
 
 </html>
