Исправить ошибки после ревью

--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
         <div class="popup__container">
             <button type="button" aria-label="Закрыть" class="popup__close"></button>
             <h2 class="popup__heading">Редактировать профиль</h2>
-            <form name="popup__forms" class="popup__forms" method="get" action="#">
-                <input required type="text" name="popup__name" minlength="2" maxlength="40" id="profile-name"
-                    class="popup__form popup__form_type_name">
+            <form name="popup__forms" id="profile-form" class="popup__forms" method="get" action="#">
+                <input required type="text" placeholder="Имя" name="popup__name" minlength="2" maxlength="40"
+                    id="profile-name" class="popup__form popup__form_type_name">
                 <span class="popup__error" id="profile-name-error"></span>
-                <input required type="text" name="popup__description" id="popup-description" minlength="2"
-                    maxlength="200" class="popup__form popup__form_type_description">
+                <input required type="text" placeholder="Вид деятельности" name="popup__description"
+                    id="popup-description" minlength="2" maxlength="200"
+                    class="popup__form popup__form_type_description">
                 <span class="popup__error" id="popup-description-error"></span>
-                <button class="popup__save-button" aria-label="Сохранить" type="submit">Сохранить</button>
+                <button disabled class="popup__save-button popup__save-button_disabled" aria-label="Сохранить"
+                    type="submit">Сохранить</button>
             </form>
         </div>
     </section>
@@ -60,8 +62,8 @@
                 <input required type="url" minlength="2" placeholder="Ссылка на картинку" id="popupAddCardLink"
                     name="popupAddCard__description" class="popup__form popup__form_type_description">
                 <span class="popup__error" id="popupAddCardLink-error"></span>
-                <button class="popup__save-button" id="popupCreateButton" aria-label="Сохранить"
-                    type="submit">Создать</button>
+                <button disabled class="popup__save-button_disabled popup__save-button" id="popupCreateButton"
+                    aria-label="Сохранить" type="submit">Создать</button>
             </form>
         </div>
     </section>
