--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </li>
     </template>
     <script src="./scripts/index.js" type="module"></script>
-    <script src="./scripts/validate.js"></script>
+    <script src="./scripts/validate.js" type="module"></script>
 </body>
 
 </html>
