--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             </div>
         </li>
     </template>
-    <script src="./scripts/index.js" type="module"></script>
-    <script src="./scripts/validate.js" type="module"></script>
+    <script src="./scripts/data.js" type="module"></script>
+    <script src="./scripts/index.js" type="module" defer></script>
 </body>
 
 </html>
