hotfix: Исправить ошибки после ревью

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <input required minlength="2" maxlength="30" type="text" placeholder="Название" id="popupAddCardTitle"
                     name="popupAddCard__name" class="popup__form popup__form_type_name">
                 <span class="popup__error" id="popupAddCardTitle-error"></span>
-                <input required type="url" minlength="2" placeholder="Ссылка на картинку" id="popupAddCardLink"
+                <input required type="url" placeholder="Ссылка на картинку" id="popupAddCardLink"
                     name="popupAddCard__description" class="popup__form popup__form_type_description">
                 <span class="popup__error" id="popupAddCardLink-error"></span>
                 <button disabled class="popup__save-button_disabled popup__save-button" id="popupCreateButton"
@@ -86,8 +86,7 @@
             </div>
         </li>
     </template>
-    <script src="./scripts/data.js" type="module"></script>
-    <script src="./scripts/index.js" type="module" defer></script>
+    <script src="./scripts/index.js" type="module"></script>
 </body>
 
 </html>
