featured: Рефакторинг с классами

--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
             <button type="button" aria-label="Закрыть" class="popup__close"></button>
             <h2 class="popup__heading">Редактировать профиль</h2>
             <form name="popup__forms" id="profile-form" class="popup__forms" method="get" action="#">
-                <input required type="text" placeholder="Имя" name="popup__name" minlength="2" maxlength="40"
+                <input required type="text" placeholder="Имя" name="userName" minlength="2" maxlength="40"
                     id="profile-name" class="popup__form popup__form_type_name">
                 <span class="popup__error" id="profile-name-error"></span>
-                <input required type="text" placeholder="Вид деятельности" name="popup__description"
-                    id="popup-description" minlength="2" maxlength="200"
-                    class="popup__form popup__form_type_description">
+                <input required type="text" placeholder="Вид деятельности" name="userDescription" id="popup-description"
+                    minlength="2" maxlength="200" class="popup__form popup__form_type_description">
                 <span class="popup__error" id="popup-description-error"></span>
                 <button disabled class="popup__save-button popup__save-button_disabled" aria-label="Сохранить"
                     type="submit">Сохранить</button>
@@ -57,10 +56,10 @@
             <h2 class="popup__heading">Новое место</h2>
             <form name="popup__AddCardforms" id="popupAddCardForms" class="popup__forms" method="get" action="#">
                 <input required minlength="2" maxlength="30" type="text" placeholder="Название" id="popupAddCardTitle"
-                    name="popupAddCard__name" class="popup__form popup__form_type_name">
+                    name="name" class="popup__form popup__form_type_name">
                 <span class="popup__error" id="popupAddCardTitle-error"></span>
-                <input required type="url" placeholder="Ссылка на картинку" id="popupAddCardLink"
-                    name="popupAddCard__description" class="popup__form popup__form_type_description">
+                <input required type="url" placeholder="Ссылка на картинку" id="popupAddCardLink" name="link"
+                    class="popup__form popup__form_type_description">
                 <span class="popup__error" id="popupAddCardLink-error"></span>
                 <button disabled class="popup__save-button_disabled popup__save-button" id="popupCreateButton"
                     aria-label="Сохранить" type="submit">Создать</button>
@@ -86,7 +85,7 @@
             </div>
         </li>
     </template>
-    <script src="./scripts/index.js" type="module"></script>
+    <script src="./pages/index.js" type="module"></script>
 </body>
 
 </html>
