--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Место</title>
-</head>
+<script defer src="bundle.js"></script><link href="main.css" rel="stylesheet"></head>
 
 <body class="page">
     <header class="header">
-        <img src="<%=require('./images/logo/logo.svg')%>" alt="Логотип с надписью Место" class="header__logo">
+        <img src="images/logo.bbe2a6eafac19c3d031c.svg" alt="Логотип с надписью Место" class="header__logo">
     </header>
     <main class="content">
         <section class="profile">
-            <img src="<%=require('./images/jak-if-kusto.png')%>" alt="Фотография Жака-Иф-Кусто" class="profile__avatar">
+            <img src="images/jak-if-kusto.ad8a663e5b124b26c411.png" alt="Фотография Жака-Иф-Кусто" class="profile__avatar">
             <div class="profile__intro">
                 <div class="profile__container">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
