--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,15 @@
     </header>
     <main class="content">
         <section class="profile">
-            <img src="<%=require('./images/jak-if-kusto.png')%>" alt="Фотография Жака-Иф-Кусто" class="profile__avatar">
+            <div class="profile__avatar-bg">
+                <img src="#" alt="" class="profile__avatar">
+            </div>
             <div class="profile__intro">
                 <div class="profile__container">
-                    <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <h1 class="profile__title"></h1>
                     <button type="button" aria-label="Редактировать" class="profile__edit-button"></button>
                 </div>
-                <p class="profile__subtitle">Исследователь океана</p>
+                <p class="profile__subtitle"></p>
             </div>
             <button type="button" aria-label="Добавить" class="profile__add-button"></button>
         </section>
@@ -78,8 +80,8 @@
         <div class="popup__container">
             <button type="button" aria-label="Закрыть" class="popup__close"></button>
             <h2 class="popup__heading">Обновить аватар</h2>
-            <form name="popup__forms" id="profile-form" class="popup__forms" method="get" action="#">
-                <input required type="url" placeholder="Ссылка на картинку" id="popupAddCardLink" name="link"
+            <form name="popup__forms" id="avatar-form" class="popup__forms" method="get" action="#">
+                <input required type="url" placeholder="Ссылка на картинку" id="popupAddCardLink" name="avatar"
                     class="popup__form popup__form_type_description">
                 <span class="popup__error" id="popupAddCardLink-error"></span>
                 <button disabled class="popup__save-button_disabled popup__save-button" id="popupCreateButton" <button
@@ -87,17 +89,28 @@
                     type="submit">Сохранить</button>
             </form>
         </div>
-
-        <template id="card-template">
-            <li class="element">
-                <div class="element__trash-can"></div>
-                <img src="#" class="element__img">
-                <div class="element__group">
-                    <h2 class="element__heading"></h2>
+    </div>
+    <div class="popup delete-popup">
+        <div class="popup__container">
+            <button type="button" aria-label="Закрыть" class="popup__close"></button>
+            <h2 class="popup__heading">Вы уверены?</h2>
+            <button class="popup__save-button popup__delete-btn" id="popupCreateButton">Да</button>
+            </form>
+        </div>
+    </div>
+    <template id="card-template">
+        <li class="element">
+            <div class="element__trash-can"></div>
+            <img src="#" class="element__img">
+            <div class="element__group">
+                <h2 class="element__heading"></h2>
+                <div class="element__like-group">
                     <button type="button" class="element__like"></button>
+                    <span class="element__like-amount"></span>
                 </div>
-            </li>
-        </template>
+            </div>
+        </li>
+    </template>
 </body>
 
 </html>
