--- a/src/index.html
+++ b/src/index.html
@@ -83,9 +83,9 @@
             <form name="popup__forms" id="avatar-form" class="popup__forms" method="get" action="#">
                 <input required type="url" placeholder="Ссылка на картинку" id="popupAddCardLink" name="avatar"
                     class="popup__form popup__form_type_description">
-                <span class="popup__error" id="popupAddCardLink-error"></span>
+                <span class="popup__error" id=""></span>
                 <button disabled class="popup__save-button_disabled popup__save-button" id="popupCreateButton" <button
-                    disabled class="popup__save-button popup__save-button_disabled" aria-label="Сохранить"
+                    class="popup__save-button popup__save-button_disabled" aria-label="Сохранить"
                     type="submit">Сохранить</button>
             </form>
         </div>
@@ -94,8 +94,7 @@
         <div class="popup__container">
             <button type="button" aria-label="Закрыть" class="popup__close"></button>
             <h2 class="popup__heading">Вы уверены?</h2>
-            <button class="popup__save-button popup__delete-btn" id="popupCreateButton">Да</button>
-            </form>
+            <button class="popup__save-button popup__delete-btn" id="popupYesButton">Да</button>
         </div>
     </div>
     <template id="card-template">
