--- a/src/index.html
+++ b/src/index.html
@@ -81,11 +81,10 @@
             <button type="button" aria-label="Закрыть" class="popup__close"></button>
             <h2 class="popup__heading">Обновить аватар</h2>
             <form name="popup__forms" id="avatar-form" class="popup__forms" method="get" action="#">
-                <input required type="url" placeholder="Ссылка на картинку" id="popupAddCardLink" name="avatar"
+                <input required type="url" placeholder="Ссылка на картинку" name="avatar"
                     class="popup__form popup__form_type_description">
                 <span class="popup__error" id=""></span>
-                <button disabled class="popup__save-button_disabled popup__save-button" id="popupCreateButton" <button
-                    class="popup__save-button popup__save-button_disabled" aria-label="Сохранить"
+                <button disabled class="popup__save-button_disabled popup__save-button" aria-label="Сохранить"
                     type="submit">Сохранить</button>
             </form>
         </div>
