featured: Исправить дизаблинг кнопок и попапы

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
             </form>
         </div>
     </div>
-    <div class="popup popup-img">
+    <div class="popup popup_dark popup-img ">
         <div class="popup__picture-container">
             <button type="button" aria-label="Закрыть" id="closeBigImg"
                 class="popup__close popup__close_type_popup-img"></button>
